--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
   },
   "dependencies": {
     "expo": "~40.0.0",
+    "expo-location": "^11.0.0",
+    "expo-notifications": "^0.9.0",
+    "expo-permissions": "^11.0.0",
     "expo-status-bar": "~1.0.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-maps": "^0.27.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
