--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "expo": "~40.0.0",
     "expo-location": "^11.0.0",
     "expo-notifications": "^0.9.0",
