Show victim location to user - realtime

--- a/app.json
+++ b/app.json
@@ -20,15 +20,16 @@
       "supportsTablet": true
     },
     "android": {
-      "config":{
-        "googleMaps":{
+      "config": {
+        "googleMaps": {
           "apiKey": "AIzaSyB6pOeU_MpjIcKlQz2jD-epOm7nO1cxXzk"
         }
       },
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#000000"
-      }
+      },
+      "package": "com.venkatr21.DefenShe"
     },
     "web": {
       "favicon": "./assets/favicon.png"
