--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-notifications": "^0.9.0",
     "expo-permissions": "^11.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-task-manager": "^9.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
