--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-status-bar": "~1.0.3",
     "expo-task-manager": "^9.0.0",
     "fbemitter": "^3.0.0",
+    "hybrid-crypto-js": "^0.2.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
