--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.21.1",
     "crypto": "^1.0.1",
     "expo": "~40.0.0",
+    "expo-ads-admob": "~8.4.0",
     "expo-location": "^11.0.0",
     "expo-notifications": "^0.9.0",
     "expo-permissions": "^11.0.0",
