--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-animated-splash-screen": "^2.0.5",
+    "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.1",
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
