--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo-location": "^11.0.0",
     "expo-notifications": "^0.9.0",
     "expo-permissions": "^11.0.0",
+    "expo-secure-store": "^10.1.0",
     "expo-status-bar": "~1.0.3",
     "expo-task-manager": "^9.0.0",
     "fbemitter": "^3.0.0",
