--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "react-native-gesture-handler": "^1.10.1",
     "react-native-maps": "^0.27.1",
     "react-native-maps-directions": "^1.8.0",
+    "react-native-qrcode-svg": "^6.1.1",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.17.1",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.3.2"
   },
